style: center and align issue list for mobile view

--- a/client/src/components/IssueList/style.css
+++ b/client/src/components/IssueList/style.css
@@ -71,23 +71,25 @@
 
 @media (max-width: 768px) {
   .issueListSection {
-    padding: 3rem auto;
+    padding: 0;
+    width: 100vw;
   }
   .issue-bar .name-col {
-    -ms-flex-preferred-size: 25%;
-        flex-basis: 25%;
+    -ms-flex-preferred-size: 29%;
+        flex-basis: 29%;
   }
   .issue-bar .category-col {
-    -ms-flex-preferred-size: 25%;
-        flex-basis: 25%;
+    -ms-flex-preferred-size: 29%;
+        flex-basis: 29%;
   }
   .issue-bar .due-date-col {
-    -ms-flex-preferred-size: 25%;
-        flex-basis: 25%;
+    -ms-flex-preferred-size: 29%;
+        flex-basis: 29%;
   }
   .issue-bar .status-col {
-    -ms-flex-preferred-size: 25%;
-        flex-basis: 25%;
+    -ms-flex-preferred-size: 13%;
+        flex-basis: 13%;
+    text-align: center;
   }
 }
 /*# sourceMappingURL=style.css.map */
